<resources>
    <string name="app_name">SurveyApp</string>
    <string name="fill_out_survey">FILL OUT SURVEY</string>
    <string name="view_survey_results">VIEW SURVEY RESULTS</string>
    <string name="surveys">_Surveys</string>
    <string name="personal_details">Personal Details :</string>
    <string name="whats_is_your_favorite_food">What is your favorite food?   </string>
    <string name="full_names">Full Names</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="other">Other</string>
    <string name="pap_and_wors">Pap and Wors</string>
    <string name="pasta">Pasta</string>
    <string name="pizza">Pizza</string>
    <string name="submit">SUBMIT</string>
    <string name="please_rate_your_level_of_agreement_on_a_scale_from_1_to_5_with_1_being_strongly_agree_and_5_being_strongly_disagree">Please rate your level of agreement on a scale from 1 to 5, with 1 being strongly agree and 5 being strongly disagree.</string>
    <string name="i_like_to_watch_movies">I like to watch movies</string>
    <string name="i_like_to_watch_tv">I like to watch TV</string>
    <string name="i_like_to_eat_out">I like to eat out</string>
    <string name="i_like_to_listen_to_radio">I like to listen to radio</string>
    <string name="neutral">Neutral</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="survey_results">Survey Results</string>
    <string name="total_number_of_surveys">Total number of surveys :</string>
    <string name="average_age">Average Age :</string>
    <string name="oldest_person">Oldest person who participated in survey :</string>
    <string name="youngest_person">Youngest person who participated in survey</string>
    <string name="percentage_of_people_who_like_pasta">Percentage of people who like Pasta :</string>
    <string name="percentage_of_people_who_like_pap_and_wors">Percentage of people who like Pap and Wors :</string>
    <string name="percentage_of_people_who_like_pizza">Percentage of people who like Pizza :</string>
    <string name="people_who_like_to_watch_movies">People who like to watch movies :</string>
    <string name="people_who_like_to_watch_tv">People who like to watch TV :</string>
    <string name="people_who_like_to_eat_out">People who like to eat out :</string>
    <string name="people_who_like_to_listen_to_radio">People who like to listen to radio :</string>
    <string name="no_surveys_available">No Surveys Available</string>
</resources>