<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSurveyActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/surveys"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/tvNavFillSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_out_survey" />

        <TextView
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/view_survey_results" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvHeader"
        android:id="@+id/tvResultHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_results"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/llBody"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvResultHeader"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_number_of_surveys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvTotalNumbetOfSurvey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/average_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvAverageAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/oldest_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvOldestAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/youngest_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvYoungestAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/percentage_of_people_who_like_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvPizzaPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/percentage_of_people_who_like_pasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvPastaPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/percentage_of_people_who_like_pap_and_wors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvPapWorsPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/people_who_like_to_watch_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvMoviesPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/people_who_like_to_listen_to_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvRadioPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/people_who_like_to_eat_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvEatOutPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/people_who_like_to_watch_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingStart="30dp"
                android:id="@+id/tvTVPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:textStyle="bold"
        android:text="@string/no_surveys_available"
        android:layout_centerInParent="true"
        android:id="@+id/tvNoSurveysAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>